--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,12 @@
+#root{
+    widows: 1000px;
+    height: 713px;
+}
 .container {
     background-color: crimson;
     border: solid gray 2px;
     border-radius: 15px;
+margin-top: 8rem;
     width: 472px;
     height: 709px;
 }
@@ -21,7 +26,8 @@
 }
 
 .App {
-    display: flex;
+  max-height: 500px;
+  max-width: 800px;
 }
 
 .special-button {
@@ -32,6 +38,8 @@
     font-size: 2rem;
     padding: 20px;
     margin: 10px 25px;
+    position:absolute;
+    z-index: 1;
 }
 
 .number-button {
@@ -42,6 +50,8 @@
     font-size: 2rem;
     padding: 20px 30px;
     margin: 10px 20px;
+    position:absolute;
+    z-index: 1;
 }
 
 .number-button:nth-last-child(2) {
@@ -52,12 +62,15 @@
     font-size: 2rem;
     padding: 20px 90px;
     margin: 10px 20px;
+    position:absolute;
+    z-index: 1;
 }
 
-.oppContainer {
-    display: flex;
-    flex-direction: column;
-}
+/* .oppContainer {
+    display: inline-flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+} */
 
 .operator-button {
     background-color: skyblue;
@@ -65,6 +78,12 @@
     border-radius: 50%;
     box-shadow: 0 2px black;
     font-size: 2rem;
-    padding: 20px 25px;
-    margin: 10px 15px 10px 10px;
+    padding: 25px 25px;
+    margin-left: auto;
+    z-index: 10;
+    display: flex;
+    flex-direction: row;
+flex-wrap: wrap;
+position:absolute;
+z-index: 2;
 }
