--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 #root{
-    widows: 1000px;
+    max-width: 800px;
     height: 713px;
 }
 .container {
@@ -7,7 +7,7 @@
     border: solid gray 2px;
     border-radius: 15px;
 margin-top: 8rem;
-    width: 472px;
+    width: 450px;
     height: 709px;
 }
 
@@ -38,8 +38,8 @@ margin-top: 8rem;
     font-size: 2rem;
     padding: 20px;
     margin: 10px 25px;
-    position:absolute;
-    z-index: 1;
+    width:60px;
+   
 }
 
 .number-button {
@@ -50,8 +50,7 @@ margin-top: 8rem;
     font-size: 2rem;
     padding: 20px 30px;
     margin: 10px 20px;
-    position:absolute;
-    z-index: 1;
+
 }
 
 .number-button:nth-last-child(2) {
@@ -62,8 +61,7 @@ margin-top: 8rem;
     font-size: 2rem;
     padding: 20px 90px;
     margin: 10px 20px;
-    position:absolute;
-    z-index: 1;
+
 }
 
 /* .oppContainer {
@@ -79,11 +77,15 @@ margin-top: 8rem;
     box-shadow: 0 2px black;
     font-size: 2rem;
     padding: 25px 25px;
-    margin-left: auto;
-    z-index: 10;
-    display: flex;
-    flex-direction: row;
-flex-wrap: wrap;
-position:absolute;
-z-index: 2;
+    /* margin-block-start: 1rem; */
+    margin: 0 0 0em 11em;
+    
+
 }
+ #root > div > div.App > div:nth-child(2){
+    max-width: 340px;
+} 
+/* #root > div > div.App > div:nth-child(3){
+    width:60px;
+margin-bottom: 2rem;
+} */
